--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Release DevOps with Docker
+name: Release DevOps with Docker to Heroku
 
 on:
   push:
@@ -11,14 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: devopsdockeruh/coursepage:latest
+    - name: Login to Heroku Container Registry 
+      env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:login
